--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "build": "tsx --outDir dist src/index.ts",
+    "build": "tsc --outDir dist src/index.ts",
     "dev": "node --env-file=.env --import=tsx --watch ./src/index.ts"
   },
   "keywords": [],
