--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "build": "tsc --outDir dist src/index.ts",
+    "build": "tsc",
     "dev": "node --env-file=.env --import=tsx --watch ./src/index.ts"
   },
   "keywords": [],
@@ -17,6 +17,8 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "puppeteer": "^23.11.1",
     "tsx": "^4.19.2"
   }
