--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
+    "openai": "^4.77.0",
     "puppeteer": "^23.11.1",
     "tsx": "^4.19.2"
   }
