--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@next/env": "^15.1.4",
     "@prisma/client": "6.1.0",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
@@ -40,8 +41,6 @@
     "puppeteer": "^23.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.1",
-    "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20"
+    "react-markdown": "^9.0.1"
   }
 }
