--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,10 @@
   "crons": [{
     "path": "/api/scrapper",
     "schedule": "0 6 * * *"
-  }]
+  }],
+  "functions": {
+    "/api/scrapper": {
+      "maxDuration": 60
+    }
+  }
 }
