--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "yarn typeorm migration:run && tsc",
     "dev": "node --env-file=.env --import=tsx --watch ./src/index.ts",
     "typeorm": "yarn run build && npx typeorm -d dist/src/infra/database/data-source.js",
     "migrate:gen": "yarn run build && cd src/infra/database/migrations/ && npx typeorm -d ../../../../dist/src/infra/database/data-source.js migration:generate -p",
