--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "build": "tsc && npx typeorm -d dist/src/infra/database/data-source.js migration:run",
     "dev": "node --env-file=.env --import=tsx --watch ./src/index.ts",
     "typeorm": "npm run build && npx typeorm -d dist/src/infra/database/data-source.js",
