--- a/package.json
+++ b/package.json
@@ -5,43 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev --turbopack",
-    "build": "prisma generate && prisma migrate deploy && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "typeorm": "yarn run build && npx typeorm -d dist/src/infra/database/data-source.js",
-    "migrate:gen": "yarn run build && cd src/infra/database/migrations/ && npx typeorm -d ../../../../dist/src/infra/database/data-source.js migration:generate -p",
-    "migrate:latest": "yarn typeorm migration:run",
-    "migrate:rollback": "yarn typeorm migration:revert",
-    "postinstall": "prisma generate"
+    "start": "node dist/src/index.js",
+    "build": "tsc && npx typeorm -d dist/src/infra/database/data-source.js migration:run",
+    "dev": "node --env-file=.env --import=tsx --watch ./src/index.ts",
+    "typeorm": "npm run build && npx typeorm -d dist/src/infra/database/data-source.js",
+    "migrate:gen": "npm run build && cd src/infra/database/migrations/ && npx typeorm -d ../../../../dist/src/infra/database/data-source.js migration:generate -p",
+    "migrate:latest": "npm run typeorm migration:run",
+    "migrate:rollback": "npm run typeorm migration:revert"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "22.10.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "^22.10.2",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@next/env": "^15.1.4",
-    "@prisma/client": "6.1.0",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
-    "next": "15.1.3",
-    "openai": "^4.78.1",
+    "openai": "^4.77.0",
     "pg": "^8.13.1",
-    "prisma": "^6.1.0",
     "puppeteer": "^23.11.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.1"
+    "reflect-metadata": "^0.2.2",
+    "tsx": "^4.19.2",
+    "typeorm": "^0.3.20"
   }
 }
